removing gdp sectino on formation of concepts - and work on that in other chapter

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1257,29 +1257,28 @@ My motivations driving this design work were to mitigate potential learner alien
 
 <!-- I addressed this by printing step by step tutorials. However the paper based resources did not allow users to copy and paste code, a  characteristic of online code examples and tutorials which facilitates quick progress. -->
 
+
+
+<!--
+
 In trying to organise and represent code examples to participants in a logical way, I experimented with different categories and themes to contains the emerging game elements. I also explored the concept of mapping the different challenges by difficulty on a map via structuring via concentric rings. An example of the kind of grouping sketch used is included below as Figure 4.x.  
 
 ![Scan of Journal Sketch of early attempt at dividing features by type and difficulty](./Pictures/pattern_types_sketch.png){width=85%}
 
 _Fig 4.x. Scan of Journal Sketch of early attempt at dividing features by type and difficulty - Dated 11.3.2019_
 
-The process of sketching, revising and re-sketching the elements led me to connect this process of categorisation with the work of game theorists. For example, I recognised synergies with between _open-world_ game design and my attempts to structure resources and help learners navigate the learning experience based on choosing challenges based on their interests and appropriate difficulty levels [@squire_open-ended_2008].
+The process of sketching, revising and re-sketching the elements led me to connect this process of categorisation with the work of game theorists. For example, I recognised synergies with between _open-world_ game design and my attempts to structure resources and help learners navigate the learning experience based on choosing challenges based on their interests and appropriate difficulty levels [@squire_open-ended_2008]. -->
 
 
 <!-- NOTE SOME MOVED TO NEXT CHAPTER -->
 
-I had previously used collaborative analytical techniques which drawing on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003]. These had been developed for use in youth-oriented Game Jams to help novice game makers hack/analysis and then adapt key elements of non-digital games, and thus build participants use of language of game design concepts before engaging in digital making [@cornish_game_2018; @institute_of_play_gamestar_nodate].
+In grouping the GDP I drew on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003]. Schnell's detailed analysis of tens of game elements presented as design lenses was too complex for this audience. Instead, I adapted a simplified introductory framework developed for use in youth-oriented Game Jams to help novice game makers hack/analysis and then adapt key elements of non-digital games. The framework formed a base for activities to build participants use of language of game design concepts before engaging in digital making [@cornish_game_2018; @institute_of_play_gamestar_nodate].
 
-    As part of the introductory activity make sure students are familiar with the 5 parts of a game, or sometimes called the 5 principles of game design:
-
-    **SPACE:** Where the game takes place.
-    **GOAL:** What is the objective of the game? What are you trying to do?
-    **COMPONENTS:** What are all the objects or actors in the game?
-    **MECHANICS:** What actions take place in the game. What are the verbs involved?
-    **RULES:** What can or can’t you do in the game? What defines boundaries? Does play happen in real time or do you take turns?
-
-    Be sure to ask students what they already know about these terms or see what educated guesses they may have before giving the answers away.
-    Extract from Game Jam Guide [@cornish_game_2018]
+- **SPACE:** Where the game takes place.
+- **GOAL:** What is the objective of the game? What are you trying to do?
+- **COMPONENTS:** What are all the objects or actors in the game?
+- **MECHANICS:** What actions take place in the game. What are the verbs involved?
+- **RULES:** What can or can’t you do in the game? What defines boundaries? Does play happen in real time or do you take turns?
 
 I related this simple categorisation the emerging list of requests for game features made by my participants. I noted that some patterns addressed game aesthetics (simplified to  _game polish_) for example; the graphical representation of game characters; adding sounds; and adding background images. Others could be described as _game mechanics_ including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned aspects of _game space_: the size and shape of game world; and adding new levels the game. In P5 I extended the scheme to included  _System and Challenge_ patterns. These explore at how different elements interact to create challenge in the game.
 
@@ -1289,7 +1288,13 @@ I related this simple categorisation the emerging list of requests for game feat
 
 ![Game Design Themes](./Pictures/four_gdp_themes.png){width=95%}
 
-In retrospect, I noted that this categorisation aligns with the MDA framework which also focuses on analysis of games based on the user experience [@olsson2014conceptual]. The process of theming the patterns by function and difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching]. The theme of using professional and technical frameworks in an accessible way to facilitate the creations of novice participants is continued in the next chapter which explores the impact on users of GDPs.  
+In retrospect, I noted that this categorisation aligns with the MDA framework which also focuses on analysis of games based on the user experience [@olsson2014conceptual]. The process of theming the patterns by function and difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching].
+
+To support the process of building on implicit knowledge of game patterns via collaborative analysis I drew on the framework above to create a worksheet that I asked participants to complete on the first session after playing games.
+
+
+The theme of using professional and technical frameworks in an accessible way to facilitate the creations of novice participants is continued in the chapters five and six.  
+
 
 The section has addressed the complex conflict of participants in accessing help to overcome smaller blocks to the progress.
 
@@ -1320,15 +1325,15 @@ This allows a subsequent refocusing of research to explore these emerging issues
 
 Resources had with concrete additions from parents, PGCE students, Edlab students, University colleagues and with more indirect ongoing feedback from young people and their parents.
 
-This approach was more prescriptive than I would have adopted, however it worked well. This hesitation overcome by intervention from others can be explored in terms of agency.
+This approach was more prescriptive than I would have adopted, however it worked well. This hesitation overcome by intervention from others can be explored in terms of agency. The shift of perspective from others and the structure to try it out was very helpful in overcoming conflicts stemming from my pre-conceptions.
 
-The shift of perspective from others and the structure to try it out was very helpful in overcoming conflicts stemming from my pre-conceptions.
-
+The implementation of discreet but potentially shared game elements became a shared pattern of activity. In early stages the mutual work to produce resources, techniques and practices to share and evaluate these shared elements became a primary focus of my work, just as the implementation of game elements was the focus of the work of participants.
 
 
 <!-- NOTE - INSERT RESPONSE FROM COMMENTS FROM CATHY. -->
 
-Affordances within the domain of HCI research
+<!-- NOTE - NOT REALLY RELEVANT HERE
+Affordances within the domain of HCI research -->
 
 The particular nature of the informal setting with the participation of engaged parents is significant. It holds promise to generate resources and research more generally. This theme is further explored in conclusion of this thesis.
 
