--- a/_posts/thesis_chapters/2023-12-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-12-5-Gdps.md
@@ -152,41 +152,49 @@ IS THIS NEEDED HERE? OR REDO THIS.
 How design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
 
 
-#### On GDPs as a concept to help analysis
+<!-- #### On GDPs as a concept to help analysis -->
 
 <!-- MOVE TO METHODOLOGY - JUST GET ON WITH IT?
 Blunden cites the process of identifying a germ cell of activity as a fruitful process for researchers [FIND]. In addition, Engestrom frames expansive learning as instructive for organisational change. While research is more sparse in the field of educational practice, the principles are frequently applied to classroom practice. -->
 
 
-My decision to privilege the implementation of each GDP as the main objective  activity system mirrors choices by other researchers valuing a granular exploration of the tensions and processes at work in a complex process [@barab_using_2002].  The process of describing and to identify emerging barriers and responses to comprehension, communication and practical barriers to implementing code structures facilitates replicability of this research and supports its potential value to other practitioners.
+<!-- My decision to privilege the implementation of each GDP as the main objective  activity system mirrors choices by other researchers valuing  -->
 
-In analysis of data, the focus at a level of sub features of the game rather than simply the over all game, allows for the identification of frequent iterations of discussion, design, implementation and either self-testing or community playtesting after each new pattern added. This repetition allows for patterns of behaviour to emerge more clearly from analysis. Each GDP can be seen as a project given an interpretation of project as the concrete implementation of a goal. This sentiment is echoed by something I found in the video data. As one parent expressed when looking at the documentation for implementing one of the GDPs. "It’s like a project in itself really".
+A granular exploration of the tensions and processes at work in a complex educational environment can via identifying emerging barriers and responses to comprehension, communication and practical barriers to implementing design challenges facilitates replicability of research and supports its potential value to other practitioners [@barab_using_2002]. However, despite the value of a micro approach which includes close analysis of implementation of code structures. The process of seeking and defining a key activity scope/unit for analysis helps define useful boundaries of what to analyse in depth, thus help avoid over-scoping of the study in which preludes a greater depth of analysis.
 
-In addition, the process of seeking and defining a key area for analysis helps define useful  boundaries of what to analyse in depth, thus help avoid over-scoping of the study in which preludes depth of analysis.
+Thus, while in this study activity covers a full spectrum of activity in other chapters, this chapter focuses on the implementation of GDPs in greater depth allowing for the identification of  patterns of design stages involving discussion, planning, implementation and playtesting after each new game element. At this scope, each GDP can be seen as a project, taken here as a concrete implementation of a planned goal. This sentiment is echoed by a parent when noticing that the documentation on one GDPs involved several distinct stages - "It’s like a project in itself really!".
 
+<!-- THERE IS OVERLAP HERE WITH THE LAST CHAPTER - HOW TO REMOVE THAT AND RETAIN CLARITY ?
 
-#### On GDPs as a germ concept to help practical development
+Thus in this study activity covers a full spectrum including close analysis of implementation of code structures. However these smaller operations are not worthy of being treated as an activity system in full. WHY MAKE THIS POINT. wHAT IS THE OVERALL MOTIVATION HERE?  -->
+
+<!--
+#### On GDPs as a germ concept to help practical development -->
 
 <!-- NOTE - removed -  what is the germ cell of the overall game making activity. -->
 
-GDPs emerged as a unit of analysis through their initial observation of GDPs as a germ-cell being used at different phases / scope of the learning design as it evolved.
+GDPs emerged as a unit of analysis through their initial observation of GDPs as a germ-cell being used at different phases / scope of the learning design as it evolved. Chapter four charts the evolution of the use of GDPs in the learning design from participant led brainstorming of desired features, to self-contained tutorials and code snippets. This then was enriched by wider framework from academia, professional community and and the work of educational Game Jams, the UMC framework.
 
-Chapter four charted the evolution of the use of GDPs in the learning design from participant led brainstorming of desired features, to self-contained tutorials and code snippets. This then was enriched by wider framework from academia, professional community and and the work of educational Game Jams to form a themed framework of GDPs around, game mechanics, game space, game polish and game challenges.
+The design process is described as a mutual, i that while I led the production of the resources, I was driven by the explicit requests and implicit needs of the community and resulting feedback. The resulting design included a themed collection of GDPs
 
-The theoretical framework encourages discussion on the use of GDPs as a development tool to serve the advance game making community.
+
+
+<!-- around, game mechanics, game space, game polish and game challenges. -->
+
+<!-- LATER?
+AT provides a concept of rising to the concrete which invites analysis of how the construct of  GDPs can be be adapted to serve the development of a game making community at different scopes of activity. To illustrate this concept we can use Marx's concept of exchange as a germ-cell for analysis of capitalism.  -->
+<!-- The previous chapter described the  key elements of the learning design that were in place by P2 ( remixing from a game template, use of distributed asset creation showcasing and social playtesting).  The shared tools and documentations began to shape goal setting around implementing new features, some where held in common with other groups. -->
+
 
 The core concept of altering a game at the level of gameplay design pattern which emerged from experimental pilot process is adapted by participants and used in various forms of activity.
 
-The previous chapter described the  key elements of the learning design that were in place by P2 ( remixing from a game template, use of distributed asset creation showcasing and social playtesting).  The shared tools and documentations began to shape goal setting around implementing new features, some where held in common with other groups.
+At a larger level, the amalgamation of the GDPs into a finished game, is key to the success of the project. Good games communicate their affordances, (in the form of GDPs) to the player without the need for extensive additional documentation [@gee_learning_2005].
 
-The implementation of discreet but potentially shared game elements became a shared pattern of activity. Mutual work to produce resources, testing techniques and practices to share and evaluate these shared elements became a primary focus of work.
+This process also communicates GDPs implicitly to players, a process borne out by brainstorming sessions early in the process which say participants listing GDPs or variants of them without explicit guidance in this direction. This  goal setting and implementation using GDP as a bse developed into a principle activity of P1 with varied results.
 
-The small, quick start activities used to kick start activity game makers were an evolution from the full process of adding a game pattern. The proposed code modification instead of new code structures accelerated the process.
+By P2, to support a scaffolded entry to this practice, I developed quick start activities which proposed micro level code modification rather than implementing new code structures. While they were distinct in their pedagogy use, these shot-cuts  stemmed from the same germ-cell base of altering the game through transforming GDPs.
 
-For example, in the last chapter I described how the smaller quick changes could provide a scaffolded process to help participants engage with game making, the process of which was an adaptation of the foundational activity of deciding on and implementing gameplay design patterns.
-
-THIS NEEDS TO BE CLEARER.
-
+In addition to support their identification of the different elements that make up a game I created a sheet which drew on existing work framework (mechanics, space, goals, etc) to scaffold the process.
 
 
 ## Study of Vignette A
@@ -369,32 +377,7 @@ SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
 <!-- - Tools: Specifics on Code Playgrounds and Phaser and a Javascript framework -->
 <!-- - the media literacy practices of transfer between tools - similar to other studies - see guided participation papers -->
 
-### The process of building familiarity with game design structure including GDPs
 
-EDIT THIS DOWN AND BE CLEAR ON THE MOTIVATION IN TERMS OF AGENCY AND BARRIERS TO PARTICPATION -
-THIS WAS MOVED HERE -  DOES IT REALLY LIVE HERE?
-
-The process of understanding game structure did not emerge completely unpromted, itw as inspired by previous work inspired by reseaarch from IOPlay, GSM, etc.
-
-
-- Building familiarity with the code - -.  alienation barriers  
-- choice and navigations - > agency
-
-
-In my adaptation I had asked participants to do play a number of retro arcade and console games and then to complete created a printable A3 hand out which was given to participant after playing The key elements I are:
-
-- SPACE: Where the game takes place.
-- GOAL: What is the objective of the game? What are you trying to do?
-- COMPONENTS: What are all the objects or actors in the game?
-- MECHANICS: What actions take place in the game. What are the verbs involved?
-- RULES: What can or can’t you do in the game? What defines boundaries? Does play happen in real time or do you take turns?
-
-
-This structure chosen to present support materials to participants mirrors and potentially reinforces the framework used initially to analyse game elements.
-
-The motivation is to incrementally build familiarity with the language and concepts of game design through begining with analysis, then categories use when seeking desired patterns, and further via reading supporting documentation.
-
-While the process of games analysis has limited research for novice game makers, there is related research in the field of learning text coding. FIND?
 
 
 
