--- a/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
@@ -69,8 +69,19 @@
     -   [Structuring and using a collection of game design
         patterns](#structuring-and-using-a-collection-of-game-design-patterns)
 -   [Chapter Discussion](#chapter-discussion)
-    -   [Discussion on Authenticity of Tools and
-        Resources](#discussion-on-authenticity-of-tools-and-resources)
+    -   [On the emergent and mutual nature of the design and research
+        process AND link to
+        agency](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process-and-link-to-agency)
+        -   [Inactivity illuminating the play
+            paradox](#inactivity-illuminating-the-play-paradox)
+    -   [Discussion on authenticity and agency concerning tools and
+        resources](#discussion-on-authenticity-and-agency-concerning-tools-and-resources)
+    -   [Summary of barriers and tensions explored in this
+        chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
+    -   [Link to next chapter](#link-to-next-chapter)
+    -   [Discussion on Authenticity of Tools and Resources - SHIFT OR
+        REVISE SOMEHOW TO REALLY REDUCE IMPACT? TO METHODS
+        AGAIN?](#discussion-on-authenticity-of-tools-and-resources---shift-or-revise-somehow-to-really-reduce-impact-to-methods-again)
         -   [Empowerment implications of lifting the hood to expose
             underlying
             technology](#empowerment-implications-of-lifting-the-hood-to-expose-underlying-technology)
@@ -79,14 +90,6 @@
         -   [Analysing the use of code playground and templated approach
             through the lens of
             authenticity](#analysing-the-use-of-code-playground-and-templated-approach-through-the-lens-of-authenticity)
-        -   [Linking authenticity and
-            agency](#linking-authenticity-and-agency)
+        -   [Linking authenticity and agency - SHIFT TO CHAPTER 6 OR
+            7](#linking-authenticity-and-agency---shift-to-chapter-6-or-7)
         -   [Summary / Link](#summary-link)
-    -   [On the emergent and mutual nature of the design and research
-        process AND link to
-        agency](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process-and-link-to-agency)
-        -   [Inactivity illuminating the play
-            paradox](#inactivity-illuminating-the-play-paradox)
-    -   [Summary of barriers and tensions explored in this
-        chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
-    -   [Link to next chapter](#link-to-next-chapter)
